# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp
include/: chip8.h
src/: CMakeLists.txt  chip8.cpp  main.cpp
